Neaten up the case where cloud-init is not configured

--- a/cloud-init.service
+++ b/cloud-init.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=cloud-init script to configure nodes on boot
+Description=cloud-init script
 
 [Service]
 ExecStart=/usr/sbin/cloud-init
